--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: neuroscan
     env: python
     plan: free
-    buildCommand: pip install -r requirements_render.txt
-    startCommand: gunicorn app:app
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
     envVars:
       - key: FLASK_ENV
         value: production
