--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,24 @@
+# Core Flask dependencies
 Flask>=2.0.0
+Werkzeug>=2.0.0
+
+# HTTP requests
+requests>=2.31.0
+
+# Machine Learning
 torch>=2.0.0
 torchvision>=0.15.0
-Pillow>=9.0.0
 numpy>=1.20.0
+Pillow>=9.0.0
+
+# Computer Vision
 opencv-python>=4.5.0
-Werkzeug>=2.0.0
+
+# Database
+SQLAlchemy>=2.0.0
+
+# Production server
+gunicorn>=21.0.0
+
+# Utilities
+python-dotenv>=1.0.0
