--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,13 @@ reportlab>=4.0.0
 
 # Utilities
 python-dotenv>=1.0.0
+
+# Desktop Application
+pywebview>=4.0.0
+PyGObject>=3.42.0
+
+# Packaging
+pyinstaller>=6.0.0
+
+# Google Gemini API
+google-generativeai>=0.3.0
