--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,14 @@ SQLAlchemy>=2.0.0
 pymongo>=4.5.0
 dnspython>=2.4.0  # Required for MongoDB srv connection
 
+# WebSocket for real-time messaging
+flask-socketio>=5.3.0
+python-socketio>=5.9.0
+
 # Production server
 gunicorn>=21.0.0
+gevent>=23.9.0  # For WebSocket support (better Windows support than eventlet)
+gevent-websocket>=0.10.1
 
 # PDF Generation
 reportlab>=4.0.0
